tests/appscaling/appscalingpolicy/01-general-config.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingConfig
metadata:
  name: general-policy
  namespace: appscalingpolicy
  labels:
    aws.kropath.run/resource-name: general-policy
spec:
  mandatory:
    minCapacity: 0
    maxCapacity: 0
    disableScaleIn: false
    scaleInCooldown: 0
    scaleOutCooldown: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    minCapacity: 1
    maxCapacity: 10
    disableScaleIn: false
    scaleInCooldown: 300
    scaleOutCooldown: 60
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  aws:
    accountId: "123456789012"
    region: us-east-1
