tests/appscaling/appscalingpolicy/02-basic-target-tracking.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac1-basic-tt-policy
  namespace: appscalingpolicy
spec:
  policyName: scale-by-cpu
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/my-svc
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
