tests/appscaling/appscalingpolicy/03-target-value-passthrough.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac2-target-value
  namespace: appscalingpolicy
spec:
  policyName: ac2-tt-75-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/tv-svc
  targetTracking:
    targetValue: 75.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
