tests/appscaling/appscalingpolicy/04-cooldown-passthrough.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac3-cooldown-passthrough
  namespace: appscalingpolicy
spec:
  policyName: ac3-cooldown-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/cooldown-svc
  targetTracking:
    targetValue: 50.0
    scaleInCooldown: 120
    scaleOutCooldown: 30
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
