tests/appscaling/appscalingpolicy/06-mandatory-scale-in-override.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac4-mandatory-scale-in
  namespace: appscalingpolicy
spec:
  configRef: mandatory-cooldown
  policyName: ac4-mandatory-in-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/mandatory-in-svc
  targetTracking:
    targetValue: 50.0
    scaleInCooldown: 60
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
