tests/appscaling/appscalingpolicy/07-mandatory-scale-out-override.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac5-mandatory-scale-out
  namespace: appscalingpolicy
spec:
  configRef: mandatory-cooldown
  policyName: ac5-mandatory-out-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/mandatory-out-svc
  targetTracking:
    targetValue: 50.0
    scaleOutCooldown: 30
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
