tests/appscaling/appscalingpolicy/08-disable-scale-in-false.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac6-disable-scale-in-false
  namespace: appscalingpolicy
spec:
  policyName: ac6-no-disable-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/no-disable-svc
  targetTracking:
    targetValue: 50.0
    disableScaleIn: false
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
