tests/appscaling/appscalingpolicy/10-mandatory-disable-scale-in.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac7-mandatory-disable
  namespace: appscalingpolicy
spec:
  configRef: mandatory-disable
  policyName: ac7-mandatory-disable-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/mandatory-disable-svc
  targetTracking:
    targetValue: 50.0
    disableScaleIn: false
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
