tests/appscaling/appscalingpolicy/11-defaults-disable-config.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingConfig
metadata:
  name: defaults-disable
  namespace: appscalingpolicy
  labels:
    aws.kropath.run/resource-name: defaults-disable
spec:
  mandatory:
    minCapacity: 0
    maxCapacity: 0
    disableScaleIn: false
    scaleInCooldown: 0
    scaleOutCooldown: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
  defaults:
    minCapacity: 0
    maxCapacity: 0
    disableScaleIn: false
    scaleInCooldown: 0
    scaleOutCooldown: 0
    tags: {}
    syncedLabels: {}
    syncedAnnotations: {}
