tests/appscaling/appscalingpolicy/12-defaults-disable-scale-in.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac8-defaults-disable
  namespace: appscalingpolicy
spec:
  configRef: defaults-disable
  policyName: ac8-defaults-disable-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/defaults-disable-svc
  targetTracking:
    targetValue: 50.0
    disableScaleIn: false
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
