tests/appscaling/appscalingpolicy/13-instance-disable-scale-in.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac9-instance-disable
  namespace: appscalingpolicy
spec:
  policyName: ac9-instance-disable-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/instance-disable-svc
  targetTracking:
    targetValue: 50.0
    disableScaleIn: true
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
