tests/appscaling/appscalingpolicy/14-customized-metric.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac10-custom-metric
  namespace: appscalingpolicy
spec:
  policyName: ac10-custom-metric-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/custom-metric-svc
  targetTracking:
    targetValue: 100.0
    customizedMetricSpecification:
      metricName: RequestCount
      namespace: AWS/ApplicationELB
      statistic: Average
      dimensions:
        - name: LoadBalancer
          value: app/my-alb/abc123
