tests/appscaling/appscalingpolicy/15-step-scaling.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac11-step-scaling
  namespace: appscalingpolicy
spec:
  policyName: ac11-step-policy
  policyType: StepScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/step-svc
  stepScaling:
    adjustmentType: ChangeInCapacity
    cooldown: 60
    metricAggregationType: Average
    stepAdjustments:
      - metricIntervalLowerBound: 0
        metricIntervalUpperBound: 10
        scalingAdjustment: 1
      - metricIntervalLowerBound: 10
        scalingAdjustment: 2
