tests/appscaling/appscalingpolicy/16-direct-resource-id.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac12-direct-resource
  namespace: appscalingpolicy
spec:
  policyName: ac12-dynamo-write-policy
  policyType: TargetTrackingScaling
  serviceNamespace: dynamodb
  scalableDimension: dynamodb:table:WriteCapacityUnits
  resourceID: table/MyTable
  targetTracking:
    targetValue: 70.0
    predefinedMetricSpecification:
      predefinedMetricType: DynamoDBWriteCapacityUtilization
