tests/appscaling/appscalingpolicy/17-appscaling-target-stub.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingTarget
metadata:
  name: policy-ref-target
  namespace: appscalingpolicy
  labels:
    aws.kropath.run/resource-name: policy-ref-target
spec:
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/ref-svc
  minCapacity: 1
  maxCapacity: 10
