tests/appscaling/appscalingpolicy/18-resource-ref-resolution.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac13-resource-ref
  namespace: appscalingpolicy
spec:
  policyName: ac13-ref-policy
  policyType: TargetTrackingScaling
  resourceRef: policy-ref-target
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
