tests/appscaling/appscalingpolicy/19-deletion-policy-retain.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac14-retention
  namespace: appscalingpolicy
spec:
  policyName: ac14-retain-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/retain-svc
  deletionPolicy: retain
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
