tests/appscaling/appscalingpolicy/20-deletion-policy-delete.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac15-deletion
  namespace: appscalingpolicy
spec:
  policyName: ac15-delete-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/delete-svc
  deletionPolicy: delete
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
