tests/appscaling/appscalingpolicy/21-synced-labels.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac16-synced-labels
  namespace: appscalingpolicy
spec:
  policyName: ac16-synced-labels-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/synced-labels-svc
  syncedLabels:
    team: platform
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
