tests/appscaling/appscalingpolicy/23-configref-lookup.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac17-configref-lookup
  namespace: appscalingpolicy
spec:
  configRef: custom-policy
  policyName: ac17-custom-cfg-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/custom-cfg-svc
  targetTracking:
    targetValue: 50.0
    scaleInCooldown: 60
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
