tests/appscaling/appscalingpolicy/24-predefined-alb-metric.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac18-alb-metric
  namespace: appscalingpolicy
spec:
  policyName: ac18-alb-rps-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/alb-svc
  targetTracking:
    targetValue: 1000.0
    predefinedMetricSpecification:
      predefinedMetricType: ALBRequestCountPerTarget
      resourceLabel: app/my-alb/abc123/targetgroup/my-tg/def456
