tests/appscaling/appscalingpolicy/25-lambda-target.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac19-lambda-policy
  namespace: appscalingpolicy
spec:
  policyName: ac19-lambda-concurrency-policy
  policyType: TargetTrackingScaling
  serviceNamespace: lambda
  scalableDimension: lambda:function:ProvisionedConcurrency
  resourceID: "function:my-lambda:BLUE"
  targetTracking:
    targetValue: 0.7
    predefinedMetricSpecification:
      predefinedMetricType: LambdaProvisionedConcurrencyUtilization
