tests/appscaling/appscalingpolicy/26-dynamodb-write.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac20-dynamodb-write
  namespace: appscalingpolicy
spec:
  policyName: ac20-dynamo-write-policy
  policyType: TargetTrackingScaling
  serviceNamespace: dynamodb
  scalableDimension: dynamodb:table:WriteCapacityUnits
  resourceID: table/MyDynamoDB
  targetTracking:
    targetValue: 70.0
    predefinedMetricSpecification:
      predefinedMetricType: DynamoDBWriteCapacityUtilization
