tests/appscaling/appscalingpolicy/27-policy-name.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac21-policy-name
  namespace: appscalingpolicy
spec:
  policyName: my-custom-scaling-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/policy-name-svc
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
