tests/appscaling/appscalingpolicy/28-step-adjustments.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac22-step-adjustments
  namespace: appscalingpolicy
spec:
  policyName: ac22-step-percent-policy
  policyType: StepScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/step-adj-svc
  stepScaling:
    adjustmentType: PercentChangeInCapacity
    cooldown: 90
    metricAggregationType: Maximum
    minAdjustmentMagnitude: 1
    stepAdjustments:
      - metricIntervalLowerBound: 0
        metricIntervalUpperBound: 20
        scalingAdjustment: 10
      - metricIntervalLowerBound: 20
        scalingAdjustment: 30
