tests/appscaling/appscalingpolicy/29-resource-conflict.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac-neg11-resource-conflict
  namespace: appscalingpolicy
spec:
  policyName: ac-neg11-resource-conflict-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/conflict-svc
  resourceRef: some-target-ref
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
