tests/appscaling/appscalingpolicy/30-metric-conflict.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac-neg12-metric-conflict
  namespace: appscalingpolicy
spec:
  policyName: ac-neg12-metric-conflict-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/metric-conflict-svc
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
    customizedMetricSpecification:
      metricName: RequestCount
      namespace: AWS/ApplicationELB
      statistic: Average
