tests/appscaling/appscalingpolicy/31-no-metric-spec.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac-neg13-no-metric
  namespace: appscalingpolicy
spec:
  policyName: ac-neg13-no-metric-policy
  policyType: TargetTrackingScaling
  serviceNamespace: ecs
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/no-metric-svc
  targetTracking:
    targetValue: 50.0
