tests/appscaling/appscalingpolicy/32-missing-service-namespace.yaml
apiVersion: aws.kropath.run/v1alpha1
kind: AppScalingPolicy
metadata:
  name: ac-neg14-missing-ns
  namespace: appscalingpolicy
spec:
  policyName: ac-neg14-missing-ns-policy
  policyType: TargetTrackingScaling
  scalableDimension: ecs:service:DesiredCount
  resourceID: service/default/missing-ns-svc
  targetTracking:
    targetValue: 50.0
    predefinedMetricSpecification:
      predefinedMetricType: ECSServiceAverageCPUUtilization
